k8s-manifests/polybot/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polybot
  template:
    metadata:
      labels:
        app: polybot
    spec:
      containers:
      - name: polybot
        image: ameerarayan/polybot-prod:12
        ports:
        - containerPort: 8443
