k8s-manifests/polybot/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polybot
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

spec:
  ingressClassName: nginx
  rules:
    - host: polybot.ameera.fursa.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: polybot-service
                port:
                  number: 8443
